<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddTodoActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/todo_item_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/bg_grey_rounded_rectangle"
            android:hint="@string/title"
            android:padding="@dimen/dimen_12dp"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/todo_cta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/bg_grey_rounded_rectangle"
            android:gravity="top"
            android:hint="@string/description"
            android:maxLength="20000"
            android:maxLines="10"
            android:minHeight="@dimen/dimen_2000dp"
            android:padding="@dimen/dimen_12dp"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todo_title" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/bg_rounded_rectangele_pink"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toStartOf="@id/btn_done"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todo_cta" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/bg_rounded_rectangele_pink"
            android:enabled="false"
            android:layout_marginStart="@dimen/dimen_24"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/todo_cta" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>